--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<junit.platform.version>1.0.0</junit.platform.version>
 		<org.apache.jmeter.version>3.1</org.apache.jmeter.version>
 		<org.apache.commons>3.4</org.apache.commons>
-		<org.elasticsearch.client>5.5.2</org.elasticsearch.client>
+		<org.elasticsearch.client>6.0.0</org.elasticsearch.client>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -54,12 +54,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.elasticsearch.client</groupId>
-			<artifactId>rest</artifactId>
-			<version>${org.elasticsearch.client}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.elasticsearch.client</groupId>
-			<artifactId>transport</artifactId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
 			<version>${org.elasticsearch.client}</version>
 		</dependency>
 		<dependency>
@@ -139,7 +134,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.4.1</version>
 				<executions>
 					<!-- Run shade goal on package phase -->
 					<execution>
@@ -148,33 +143,15 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-                            <minimizeJar>true</minimizeJar>
                             <artifactSet>
                                 <excludes>
                                     <exclude>org.apache.jmeter:*</exclude>
                                     <exclude>commons-codec:*</exclude>
                                     <exclude>commons-logging:*</exclude>
                                     <exclude>org.apache.httpcomponents:*</exclude>
+                                    <exclude>net.java.dev.jna:*</exclude>
                                 </excludes>
                             </artifactSet>
-                            <relocations>
-                                <relocation>
-                                    <pattern>org.joda</pattern>
-                                    <shadedPattern>net.delirius.dep.org.joda</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>org.yaml.snakeyaml</pattern>
-                                    <shadedPattern>net.delirius.dep.org.yaml.snakeyaml</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>com.fasterxml.jackson</pattern>
-                                    <shadedPattern>net.delirius.dep.com.fasterxml.jackson</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>org.HdrHistogram</pattern>
-                                    <shadedPattern>net.delirius.dep.org.HdrHistogram</shadedPattern>
-                                </relocation>
-                            </relocations>
 						</configuration>
 					</execution>
 				</executions>
