--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.delirius325</groupId>
 	<artifactId>jmeter.backendlistener.elasticsearch</artifactId>
-	<version>2.2.2</version>
+	<version>2.2.3</version>
 	<packaging>jar</packaging>
 
 	<name>jmeter.backendlistener.elasticsearch</name>
@@ -19,7 +19,7 @@
 	</licenses>
 
 	<scm>
-		<url>https://github.com/delirius325/jmeter-elasticsearch-backend-listener</url>
+		<url>https://github.com/delirius325/jmeter-elasticsearch-backend-listener.git</url>
 	</scm>
 
 	<developers>
@@ -42,8 +42,8 @@
 		<junit.vintage.version>${junit.version}.0</junit.vintage.version>
 		<junit.jupiter.version>5.0.0</junit.jupiter.version>
 		<junit.platform.version>1.0.0</junit.platform.version>
-		<org.apache.jmeter.version>3.1</org.apache.jmeter.version>
-		<org.apache.commons>3.4</org.apache.commons>
+		<org.apache.jmeter.version>4.0</org.apache.jmeter.version>
+		<org.apache.commons>3.7</org.apache.commons>
 		<org.elasticsearch.client>6.2.0</org.elasticsearch.client>
 	</properties>
 	<dependencies>
@@ -110,6 +110,11 @@
 			<artifactId>junit-vintage-engine</artifactId>
 			<version>${junit.vintage.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.4.0</version>
 		</dependency>
 	</dependencies>
 	<distributionManagement>
@@ -194,7 +199,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.7.0</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
