--- a/pom.xml
+++ b/pom.xml
@@ -223,6 +223,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration> 
+					<source>8</source> 
+				</configuration> 
 				<version>2.9.1</version>
 				<executions>
 					<execution>
